test/types/records/sungeun/recursiveRecord.good
recursiveRecord.chpl:2: error: recursive record definition
